--- a/avin_search/Cargo.toml
+++ b/avin_search/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "avin_filter"
-description = "Simple back filter, part of 'avin' library"
+name = "avin_search"
+description = "Simple back search, part of 'avin' library"
 version = { workspace = true }
 edition = { workspace = true }
 license = { workspace = true }
