--- a/avin_adviser/Cargo.toml
+++ b/avin_adviser/Cargo.toml
@@ -15,5 +15,6 @@ avin_connect = { workspace = true }
 avin_core = { workspace = true }
 avin_data = { workspace = true }
 avin_utils = { workspace = true }
+chrono = { workspace = true }
 log = { workspace = true }
 tokio = { workspace = true }
